--- a/Deployment.yml
+++ b/Deployment.yml
@@ -1,36 +1,10 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Pod
 metadata:
-  name: nginx-deployment
+  name: mypod
   labels:
-     app: nginx
+    name: mypod
 spec:
-  replicas: 1
-template:
-  metadata:
-    labels:
-      app: nginx
-  spec:
-    containers:
-    - name: nginx
-      image: nginx:1.6
-      ports:
-      - containerPort: 80
----
-apiVersion: apps/v1
-kind: Service
-metadata:
-  name: nginx-service  
-  labels:
-    app: nginx
-spec:
-  type: NodePort
-  selector:
-    app: nginx
-  ports:
-    - nodePort: 30500
-      port: 80
-      protocol: TCP
-  
-    
-
+  containers:
+  - name: mypod
+    image: latest
