--- a/Deployment.yml
+++ b/Deployment.yml
@@ -1,10 +1,40 @@
 apiVersion: v1
-kind: Pod
+kind: Namespace
 metadata:
-  name: mypod
-  labels:
-    name: mypod
+  name: hugo-site
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: hugo-site
+  namespace: hugo-site
 spec:
-  containers:
-  - name: mypod
-    image: latest
+  selector:
+    app: hugo-site
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
+  type: NodePort
+ ---
+ apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: hugo-site
+  namespace: hugo-site
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: hugo-site
+  template:
+    metadata:
+      labels:
+        app: hugo-site
+    spec:
+      containers:
+      - name: hugo-site
+        image: manoj8202/dockerhandson:latest
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 80
